# VoiceSDK

./: .gitignore  CMakeLists.txt  tests.sh
cmake/: FindEigen.cmake
src/VoiceSDK/: .gitignore  definitions.hpp  definitions.hpp.in  parallel_cast.hpp  polynomial.hpp  queue.hpp  ringbuffer.hpp  type_traits.hpp
tests/: CMakeLists.txt
tests/src/: main.cpp
